# Project-Skies

./: Cargo.toml  README.md  build.rs
assets/aero_data/: f16-elevators.ron  f16.ron
assets/audio/ReasonToFight/: subtitles.ron
assets/fonts/: 8bitOperatorPlusSC-Regular.ttf.import  Inter-Thin.ttf.import
assets/levels/selecting_plane/: data.json
assets/levels/test_chamber/: data.csv  data.json  data_test.json
assets/scenes/selecting_plane/: data.json  data.ron
assets/scenes/test_chamber/: data.json  data.ron  data1.csv  level_planning.ron
assets/ui/: README.MD  game_ui.ron  pause.ron
audio/ReasonToFight/: subtitles.ron
res/: F14.gltf  F14.mtl  cockpit.gltf  crane.mtl  mountains.mtl  tower.gltf  tower.mtl  tower2.mtl  water.gltf  water.mtl
res/F16/: f16.blend  f16.blend1  f16.gltf
res/Island/: island.blend  island.blend1  island.gltf
res/Tower_2/: tower2.gltf
res/cockpit/: cockpit.gltf
res/crane/: crane.gltf
res/f14/: F14.gltf
res/water/: water.gltf
settings/: input.ron
src/: app.rs  game_object.rs  main.rs  resources.rs  resources_obj.rs  transform.rs
src/audio/: audio.rs  subtitles.rs
src/game_nodes/: game_object.rs  game_object_2d.rs  scene.rs  timing.rs
src/gameplay/: airfoil.rs  controller.rs  event_handling.rs  fixed_play.rs  main_menu.rs  plane_selection.rs  play.rs  wheel.rs  wing.rs
src/gameplay/plane/: flight_system.rs  physics_logic.rs  plane.rs  utils.rs
src/input/: button_module.rs  input.rs  mouse.rs  pressable.rs  utils.rs
src/physics/: physics.rs  physics_handler.rs  physics_resources.rs
src/primitive/: button.rs  manual_vertex.rs  rectangle.rs  text.rs
src/rendering/: camera.rs  camera_by_target.rs  depth_renderer.rs  instance_management.rs  light.rs  model.rs  physics_rendering.rs  render_line.rs  render_pass.rs  rendering_utils.rs  textures.rs  ui.rs  vertex.rs
src/shaders/: depth copy.wgsl  depth.wgsl  depth_map.wgsl  light.wgsl  physics_lines.wgsl  text_shader.wgsl
src/tooling/: base_frame.rs  debug_console.rs  tooling_manager.rs
src/ui/: button.rs  label.rs  text.rs  ui_node.rs  ui_structure.rs  ui_transform.rs  vertical_container.rs
src/ui/components/: container.rs  label.rs  mod.rs
src/utils/: lerps.rs
