[package]
name = "pankarta-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = {version = "*", default-features = false, features = ["ttf", "image", "raw-window-handle"]}
wgpu = "0.18.0"
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = [ "derive" ] }
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
anyhow = "*"
fs_extra = "*"
glob = "*"
rand = "0.8"
glyphon = "0.4"
# cgmath = { version = "*", features = ["serde"] }
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }

# Physics
rapier3d = { version = "*", features = [ "simd-stable", "serde-serialize" ] }
nalgebra = "*"

ron = "*"

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "utils"]

[build-dependencies]
anyhow = "*"
cgmath = "*"
fs_extra = "*"
glob = "*"
