[package]
name = "pankarta-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = {version = "*", default-features = false, features = ["raw-window-handle" ]}
wgpu = "*"
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = [ "derive" ] }
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
anyhow = "*"
fs_extra = "*"
glob = "*"
rand = "0.8"
glyphon = "*"
rodio = "*"

# Physics
rapier3d = { version = "*", features = [ "simd-stable", "serde-serialize" ] }
nalgebra = "*"

# External file management
serde = { version = "1.0", features = ["derive"] }
ron = "*"

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "utils"]

[build-dependencies]
anyhow = "*"
cgmath = "*"
fs_extra = "*"
glob = "*"
